--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ ehthumbs.db
 fmod_editor.log
 
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Assets/App/Animations/Character/Controlers.meta
+Assets/App/Animations/Character/Controlers.meta
